--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,22 @@
-[project]
-name = "hexlet-code"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["brain_games"]
+[project]
+name = "hexlet-code"
+version = "0.1.0"
+description = "Brain Games project"
+authors = [{ name = "Dayan Holguin" }]
+
+dependencies = ["prompt>=0.4.1"]
 
 [project.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["brain_games"]
